--- a/index.html
+++ b/index.html
@@ -567,28 +567,39 @@
         src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d120048.47145918415!2d-44.034090378112786!3d-19.90270259698002!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1spt-BR!2sbr!4v1592189745148!5m2!1spt-BR!2sbr"
       ></iframe>
       <div class="add">
-        <i>Endereço: </i> Belo Horizonte, Minas Gerais - Brasil 30.730-430
+        <span class="glyphicon glyphicon-home">
+          Belo Horizonte, Minas Gerais - Brasil 30.730-430
+        </span>
+        <div>
+          <span class="glyphicon glyphicon-globe">
+            <a href="https://www.facebook.com/carlosalberto.minafrajunior"
+              >facebook
+            </a>
+          </span>
+        </div>
+        <div>
+          <span class="glyphicon glyphicon-retweet">
+            <a href="https://github.com/minafrajr"> github</a>
+          </span>
+        </div>
+        <span class="glyphicon glyphicon-envelope">
+          <a href="mailto:carlos.minafrajr@gmail.com">
+            carlos.minafrajr@gmail.com
+          </a>
+        </span>
+        <div>
+          <span class="glyphicon glyphicon-inbox">
+            <a href="https://www.linkedin.com/in/carlosalbertominafrajunior/">
+              LinkedIn
+            </a>
+          </span>
+        </div>
+        <div>
+          <span class="glyphicon glyphicon-question-sign">
+            <a href="https://twitter.com/minafrajr">@minafrajr</a></span
+          >
+        </div>
       </div>
-      <div>
-        <i class="fas glyphicon-file"
-          ><a href="https://www.facebook.com/carlosalberto.minafrajunior"
-            >facebook</a
-          ></i
-        >
-      </div>
-      <div>
-        <i class="glyphicon-facetime-video"></i>
-        <i class="glyphicon-magnet">teste</i>
-        <a href="https://github.com/minafrajr">github</a>
-      </div>
-      <i class="fas glyphicon-barcode">barcode</i>
-      <p>
-        <span class="glyphicon glyphicon-envelope"
-          ><a href="mailto:carlos.minafrajr@gmail.com"
-            >carlos.minafrajr@gmail.com</a
-          ></span
-        >
-      </p>
     </section>
 
     <!--END CONTACT SECTION-->
