--- a/index.html
+++ b/index.html
@@ -194,7 +194,9 @@
               </div>
               <div id="collapsefour" class="panel-collapse collapse">
                 <div class="panel-body">
-                  <h3>Microsoft MTA</h3>
+                  <h3>Microsoft MTA - 2012</h3>
+                  <h3>Scrum Foudation Professional Certificate - 2020</h3>
+                  <h3>Scrum Fundamentals Certified - 2020</h3>
                 </div>
               </div>
             </div>
